@@ -88,6 +88,18 @@ trait CrudTasksTrait
 				'onClick' => 'akeeba.System.submitForm(\'' . ($params['task'] ?? 'edit') . '\')',
 				'icon'    => 'fa fa-pen-to-square',
 			],
+			'batch' => [
+				'id'      => 'batch',
+				'title'   => $this->getLanguage()->text('PANOPTICON_BTN_BATCH'),
+				'class'   => 'btn btn-secondary border-light',
+				'onClick' => json_encode(
+					[
+						'data-bs-toggle' => 'modal',
+						'data-bs-target' => '#batchModal'
+					]
+				),
+				'icon'    => 'fa fa-solid fa-square',
+			],
 			'copy' => [
 				'id'      => 'copy',
 				'title'   => $this->getLanguage()->text('PANOPTICON_BTN_COPY'),
@@ -157,18 +169,6 @@ trait CrudTasksTrait
 				),
 				'icon'    => 'fa fa-question-circle me-1',
 			],
-            'batch' => [
-                'id'      => 'batch',
-                'title'   => $this->getLanguage()->text('PANOPTICON_BTN_BATCH'),
-                'class'   => 'btn btn-secondary border-light',
-                'onClick' => json_encode(
-                    [
-                        'data-bs-toggle' => 'modal',
-                        'data-bs-target' => '#batchModal'
-                    ]
-                ),
-                'icon'    => 'fa fa-solid fa-square',
-            ],
 			default => null
 		};
 
