@@ -4,6 +4,7 @@ Akeeba Panopticon 1.1.4
 + Much improved Docker support
 + Translatable dates
 + Load TinyMCE translations
++ Batch processing sites
 # [LOW] Wrong message about not having Akeeba Backup installed shown when adding a new site [gh-661]
 # [LOW] Wrong language in mail Blade templates [gh-658]
 
